<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="origin_location">Origin location: %1$s</string>
    <string name="location">Current location: %1$s</string>
    <string name="origin_location_loaded">Origin location: %1$s></string>
    <string name="location_loaded">Current location: %1$s></string>
    <string name="Species_fill">Species: %1$s</string>
    <string name="Status_fill">Status: %1$s</string>
    <string name="Gender_fill">Gender: %1$s</string>
    <string name="Type_fill">Type: %1$s</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="apply">APPLY</string>
    <string name="clear">CLEAR</string>
    <string name="Characters_filter">Characters Filter</string>
    <string name="Locations_filter">Locations filter</string>
    <string name="Episode_filter">Episode filter</string>
    <string name="location_name">Location name: %1$s</string>
    <string name="location_type">Location type: %1$s</string>
    <string name="location_dimension">Location dimension: %1$s</string>
    <string name="character_name">Name: %1$s</string>
    <string name="character_species">Species: %1$s</string>
    <string name="character_status">Status: %1$s</string>
    <string name="character_gender">Gender: %1$s</string>
    <string name="character_type">Type: %1$s</string>
    <string name="character_location">Current location: %1$s</string>
    <string name="character_origin">Origin: %1$s</string>
    <string name="episode_name">Title: %1$s</string>
    <string name="episode_number_fill">Number: %1$s</string>
    <string name="episode_date">Release date: %1$s</string>
    <string name="empty_state">No results</string>
    <string name="location_residents">Location residents:</string>
    <string name="character_episodes">Character episodes:</string>
    <string name="episode_characters">Episode characters::</string>
    <string name="Name">Name</string>
    <string name="Type">Type</string>
    <string name="Species">Species</string>
    <string name="Status">Status</string>
    <string name="Gender">Gender</string>
    <string name="Dimension">Dimension</string>
    <string name="episode_number">Episode number</string>
    <string name="char_name_example">Example : Rick Sanchez</string>
    <string name="char_spec_example">Example : Human</string>
    <string name="char_type_example">Example : Human with giant head</string>
    <string name="Alive">Alive</string>
    <string name="Dead">Dead</string>
    <string name="Unknown">Unknown</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Genderless">Genderless</string>
    <string name="loc_name_example">Example : Abadango</string>
    <string name="loc_type_example">Example : Planet</string>
    <string name="loc_dimen_example">Example : Cronenberg Dimension</string>
    <string name="ep_name_example">Example : Pilot</string>
    <string name="ep_number_example">Example : S01E05</string>
    <string name="Characters">Characters</string>
    <string name="Locations">Locations</string>
    <string name="Episodes">Episodes</string>
</resources>