<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_1">

    <EditText
        android:id="@+id/namePicker"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/back_2"
        android:ems="10"
        android:hint="@string/char_name_example"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charNameFilterTitle" />

    <EditText
        android:id="@+id/speciesPicker"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/back_2"
        android:ems="10"
        android:hint="@string/char_spec_example"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charSpeciesFitlerTitle" />

    <EditText
        android:id="@+id/typePicker"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/back_2"
        android:ems="10"
        android:hint="@string/char_type_example"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charTypeFilterTitle" />

    <RadioGroup
        android:id="@+id/statusGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/genderGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/alivePick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/Alive"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/deadPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/Dead"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/UnknowStatusPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/Unknown"
            android:textColor="@color/white" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statusGroup"
        app:layout_constraintTop_toBottomOf="@+id/genderText">

        <RadioButton
            android:id="@+id/malePick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/Male"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/femalePick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/Female"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/genderlessPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/Genderless"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/unknownGenderPick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/Unknown"
            android:textColor="@color/white" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Status"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/statusGroup"
        app:layout_constraintTop_toBottomOf="@+id/typePicker" />

    <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Gender"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/genderGroup"
        app:layout_constraintTop_toBottomOf="@+id/typePicker" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/back_main"
        android:text="@string/apply"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_btn_background"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/back_2"
        android:padding="10dp"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:text="@string/Characters_filter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/clearBtn"
        app:layout_constraintEnd_toStartOf="@+id/clearBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/clearBtn" />

    <TextView
        android:id="@+id/charNameFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/Name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTitle" />

    <TextView
        android:id="@+id/charSpeciesFitlerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/Species"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePicker" />

    <TextView
        android:id="@+id/charTypeFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/Type"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speciesPicker" />

</androidx.constraintlayout.widget.ConstraintLayout>